objects/Trigger__c.object
<CustomObject>
    <customHelpPage>SPV</customHelpPage>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Deal__c</field>
                <operation>equals</operation>
                <valueField>Agreement__c.Matter_Deal__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Triggers</relationshipLabel>
        <relationshipName>Triggers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days__c</fullName>
        <label>Days</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Days Before</fullName>
                </value>
                <value>
                    <fullName>Days After</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal</label>
        <referenceTo>advpm__Matter__c</referenceTo>
        <relationshipLabel>Triggers</relationshipLabel>
        <relationshipName>Triggers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <formula>IF( Agreement__c != null, Agreement__r.Effective_Date__c , null)</formula>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Year_End__c</fullName>
        <formula>IF(ISPICKVAL(Agreement__r.Client_Name__r.Financial_Year_End_Month__c, &quot;JANUARY&quot;), 
DATE( YEAR( TODAY() ), 01 + 1, 1 ) -1, IF(ISPICKVAL(Agreement__r.Client_Name__r.Financial_Year_End_Month__c, &quot;FEBRUARY&quot;), 
DATE( YEAR( TODAY() ), 02 + 1, 1 ) -1, IF(ISPICKVAL(Agreement__r.Client_Name__r.Financial_Year_End_Month__c, &quot;MARCH&quot;), 
DATE( YEAR( TODAY() ), 03 + 1, 1 ) -1, IF(ISPICKVAL(Agreement__r.Client_Name__r.Financial_Year_End_Month__c, &quot;APRIL&quot;), 
DATE( YEAR( TODAY() ), 04 + 1, 1 ) -1, IF(ISPICKVAL(Agreement__r.Client_Name__r.Financial_Year_End_Month__c, &quot;MAY&quot;), 
DATE( YEAR( TODAY() ), 05 + 1, 1 ) -1, IF(ISPICKVAL(Agreement__r.Client_Name__r.Financial_Year_End_Month__c, &quot;JUNE&quot;), 
DATE( YEAR( TODAY() ), 06 + 1, 1 ) -1, IF(ISPICKVAL(Agreement__r.Client_Name__r.Financial_Year_End_Month__c, &quot;JULY&quot;), 
DATE( YEAR( TODAY() ), 07 + 1, 1 ) -1, IF(ISPICKVAL(Agreement__r.Client_Name__r.Financial_Year_End_Month__c, &quot;AUGUST&quot;), 
DATE( YEAR( TODAY() ), 08 + 1, 1 ) -1, IF(ISPICKVAL(Agreement__r.Client_Name__r.Financial_Year_End_Month__c, &quot;SEPTEMBER&quot;), 
DATE( YEAR( TODAY() ), 09 + 1, 1 ) -1, IF(ISPICKVAL(Agreement__r.Client_Name__r.Financial_Year_End_Month__c, &quot;OCTOBER&quot;), 
DATE( YEAR( TODAY() ), 10 + 1, 1 ) -1, IF(ISPICKVAL(Agreement__r.Client_Name__r.Financial_Year_End_Month__c, &quot;NOVEMBER&quot;), 
DATE( YEAR( TODAY() ), 11 + 1, 1 ) -1, IF(ISPICKVAL(Agreement__r.Client_Name__r.Financial_Year_End_Month__c, &quot;DECEMBER&quot;), 
DATE( YEAR( TODAY() ), 12, 31 ), null) ) ) ) ) ) ) ) ) ) ) )</formula>
        <label>Financial Year End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Once Off</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Bi-Annually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Days__c</fullName>
        <label>Number of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Relative_Date__c</fullName>
        <label>Other Relative Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Person_Responsible__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person Responsible</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>advpm__Participant__c.advpm__Matter__c</field>
                <operation>equals</operation>
                <valueField>$Source.Deal__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>advpm__Participant__c</referenceTo>
        <relationshipLabel>Triggers</relationshipLabel>
        <relationshipName>Triggers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relative_Date__c</fullName>
        <label>Relative Date</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Frequency__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Effective Date</fullName>
                </value>
                <value>
                    <fullName>Signature Date</fullName>
                </value>
                <value>
                    <fullName>Financial Year End</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>advpm__Participant__c.advpm__Matter__c</field>
                <operation>equals</operation>
                <valueField>$Source.Deal__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>advpm__Participant__c</referenceTo>
        <relationshipLabel>Triggers (Reviewer)</relationshipLabel>
        <relationshipName>Triggers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Schedule_End_Date__c</fullName>
        <label>Schedule End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Schedule_Start_Date__c</fullName>
        <label>Schedule Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Signature_Date__c</fullName>
        <formula>Agreement__r.Signature_Date__c</formula>
        <label>Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date_End_Date_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Start Date End Date Changed</label>
        <type>Checkbox</type>
    </fields>
    <label>Trigger</label>
    <nameField>
        <label>Trigger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Triggers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Due_Date_In_The_Past</fullName>
        <active>true</active>
        <errorConditionFormula>AND 
( 
ISCHANGED(Due_Date__c) 
, 
Due_Date__c &lt; TODAY() 
,ISPICKVAL( Frequency__c , &apos;Once Off&apos;) 
)</errorConditionFormula>
        <errorDisplayField>Due_Date__c</errorDisplayField>
        <errorMessage>You may not change a Once Off Trigger Due Date to be in the past.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Due_Date_Required</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISPICKVAL( Frequency__c , &apos;Once Off&apos;) &amp;&amp;  ISNULL( Due_Date__c ) , TRUE, FALSE)</errorConditionFormula>
        <errorDisplayField>Due_Date__c</errorDisplayField>
        <errorMessage>Due Date required for Once Off Trigger</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Due_Date_Specified_On_Relative_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
ISPICKVAL( Relative_Date__c ,&quot;Other&quot;),
NOT(ISBLANK(Due_Date__c))
)</errorConditionFormula>
        <errorDisplayField>Due_Date__c</errorDisplayField>
        <errorMessage>You may not specify a Due Date on a Trigger based on an Other relative date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Due_Date_on_Relative_Date</fullName>
        <active>true</active>
        <errorConditionFormula>IF(!ISPICKVAL(Frequency__c, &apos;Once Off&apos;) &amp;&amp;  !ISBLANK(Due_Date__c)  , True, False)</errorConditionFormula>
        <errorMessage>Due Date can only be specified on Once Off Trigger</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Due_Date_or_Other_Relative_Date</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISBLANK(Due_Date__c) = FALSE &amp;&amp;  ISBLANK(Other_Relative_Date__c) = FALSE, TRUE, FALSE)</errorConditionFormula>
        <errorMessage>You may specify either a Due Date or a Other Relative Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Relative_Date_In_The_Past</fullName>
        <active>true</active>
        <errorConditionFormula>AND 
( 
ISCHANGED(Other_Relative_Date__c ) == TRUE,
NOT(ISBLANK( Other_Relative_Date__c )), 
Other_Relative_Date__c &lt; TODAY()
)</errorConditionFormula>
        <errorDisplayField>Other_Relative_Date__c</errorDisplayField>
        <errorMessage>Other Relative Date can not be in the past</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Relative_Date_Not_Specified</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
ISPICKVAL(Relative_Date__c,&quot;Other&quot;),
ISBLANK(Other_Relative_Date__c)
)</errorConditionFormula>
        <errorDisplayField>Other_Relative_Date__c</errorDisplayField>
        <errorMessage>You must specify an Other Relative Date for Trigger based on an Other relative date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Relative_Date_Fields</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISBLANK(TEXT(Relative_Date__c))),
OR(ISBLANK(TEXT(Days__c)),ISBLANK(TEXT( Frequency__c )),ISBLANK(Number_of_Days__c)))</errorConditionFormula>
        <errorMessage>Relative Date Fields Required - You must provide values for Number of Days and Days</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Relative_Date_Required</fullName>
        <active>true</active>
        <errorConditionFormula>IF(!ISPICKVAL(Frequency__c, &apos;Once Off&apos;) &amp;&amp;  ISPICKVAL( Relative_Date__c , &apos;None&apos;), TRUE, FALSE)</errorConditionFormula>
        <errorDisplayField>Relative_Date__c</errorDisplayField>
        <errorMessage>Relative Date required for Trigger that&apos;s not Once Off</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Effective_Date_on_Agreement</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISPICKVAL(Relative_Date__c, &apos;Effective Date&apos;) &amp;&amp;  ISBLANK(Effective_Date__c) == True , True, False)</errorConditionFormula>
        <errorMessage>You are not allowed to schedule a Trigger without a Effective Date on the Agreement</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Financial_Year_Date_on_Agreemen</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISPICKVAL(Relative_Date__c, &apos;Financial Year End&apos;) &amp;&amp;  ISBLANK( Financial_Year_End__c ) == True , True, False)</errorConditionFormula>
        <errorMessage>You are not allowed to schedule a Trigger without a Financial Year End on the Deal</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Relative_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
NOT(ISPICKVAL(Relative_Date__c ,&quot;Other&quot;)),
NOT(ISBLANK( Other_Relative_Date__c ))
)</errorConditionFormula>
        <errorDisplayField>Other_Relative_Date__c</errorDisplayField>
        <errorMessage>You may not specify a Other Relative Date if Relative Date is not Other</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Signature_Date_on_Agreement</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISPICKVAL(Relative_Date__c, &apos;Signature Date&apos;) &amp;&amp;  ISBLANK(Signature_Date__c) == True , True, False)</errorConditionFormula>
        <errorMessage>You are not allowed to schedule a Trigger without a Signature Date on the Agreement</errorMessage>
    </validationRules>
</CustomObject>